@@ -4,6 +4,8 @@ Jython 2.5.1
   New Features
     - Upgraded to ANTLR 3.1.3
     - [ 1859477 ] Dynamically loaded ServletFilters like PyServlet
+    - Setting __javaname__ in classes subclassing Java classes or implementing Java interfaces sets
+      the name of the produced proxy class.
   Bugs Fixed
     - [ 1366 ] parsing of lamda expression fails
     - [ 1365 ] continuation lines fail in interactive interpreter
